--- a/styles/body.css
+++ b/styles/body.css
@@ -1,3 +1,7 @@
+:root {
+	--main-color: white;
+}
+
 @font-face {
 	font-family: Input;
 	src: url("../fonts/Input/InputMono-Regular.ttf");
@@ -18,68 +22,81 @@ html, body {
 	font-family: Input;
 	
 	background-color: black;
-	/* color: #00ff00; */
+	/* color: var(--main-color); */
+
+	/* cursor: url("../images/cursor.png"), auto; */
 }
 
 * {
 	box-sizing: border-box;
 }
 
+.text {
+	color: var(--main-color);
+}
+
 header {
-	box-sizing: border-box;
 	height: 10%;
 	width: 60%;
-	border: solid 1px black;
+	box-sizing: border-box;
 
 	text-align: center;
 	margin: 0 auto;
+	padding-top: 25px;
 
+}
+
+.title {
+	box-sizing: border-box;
+
+	/* background-color: var(--main-color); */
+	border: solid 5px var(--main-color);
+	color: var(--main-color);
+
+	margin: 0 auto;
+	/* height: 90%; */
+	padding: 10px 0 10px 0;
+
+	font-weight: normal;
 }
 
 .console {
 	position: relative;
-	height: 90%;
+	height: 88%;
 	width: 60%;
 	margin: 0 auto;
 	box-sizing: border-box;
 
 	/* background-color: magenta; */
-	padding: 10px;
+	padding: 10px 0 10px 0;
 
 	font-size: 10pt;
-
 }
 
-.text {
-	color: #00ff00;
-}
+.history-wrap {
+	box-sizing: border-box;
+	
+	position: relative;
+	width: 100%;
+	height: 95%;
 
-.title {
-	/* font-weight: lighter; */
+	margin: 0 auto;
+	margin-bottom: 10px;
 
-	background-color: #00ff00;
-	color: black;
-	border: solid 5px #00ff00;
 	padding: 10px;
-	margin: 10px;
+	padding-top: 14px;
 
-
+	border-top: solid 10px black;
+	/* border: solid 1px #1d1d1d; */
+	/* background-color: #131313; */
+	/* overflow: hidden; */
 }
 
 .history {
-	margin: 0 auto;
-	position: relative;
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
+
 	overflow: hidden;
-
-	height: 95%;
-
-	box-sizing: border-box;
-	border: dashed 1px #00ff00;
-
-	padding: 10px;
-	margin-bottom: 10px;
-	
 }
 
 .prompt-wrap {
@@ -90,17 +107,14 @@ header {
 
 	margin: 0 auto;
 	text-align: center;
-	border: solid 1px #00ff00;
-
+	/* border: solid 1px var(--main-color); */
 }
 
 .prompt-wrap textarea {
-	/* position: relative; */
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 
-	/* margin-left: 10px; */
 	padding-left: 10px;
 	
 	resize: none;
@@ -108,21 +122,17 @@ header {
 	text-align: left;
 	line-height: 2.2em;
 
-	color: #00ff00;
+	color: var(--main-color);
 	background-color: #1d1d1d;
-
-	/* background-color: #00ff00; */
-
-	/* color: black; */
 	font-family: Input;
 	font-size: 10pt;
 
-	border: none;	
-	overflow: hidden;
+	border: none;
 }
 
 /* tests */
 .prompt-wrap textarea {
+
 }
 
 
@@ -133,4 +143,10 @@ header {
 .prompt-start {
 	font-weight: bold;
 	font-size: 10pt;
+}
+
+u {
+	font-style: italic;
+	font-weight: bold;
+	text-decoration: none;
 }
